--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-recommended": "^10.0",
         "drupal/devel": "^5.1",
+        "drupal/devel_entity_updates": "^4.1",
         "drupal/field_group": "^3.4",
         "drupal/gin": "^3.0@rc",
         "drupal/gin_toolbar": "^1.0@rc",
